--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,14 +22,15 @@ android {
 dependencies {
 
     def lifecycleVersion = "2.1.0"
-    def roomVersion = "2.1.0"
+    def roomVersion = "2.2.0"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
     testImplementation 'junit:junit:4.12'
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleVersion"
-// Room dependencies
+    implementation "androidx.cardview:cardview:1.0.0"
+    // Room dependencies
     implementation "androidx.room:room-runtime:$roomVersion"
     annotationProcessor "androidx.room:room-compiler:$roomVersion"
 
